--- a/styles/utils.css
+++ b/styles/utils.css
@@ -122,3 +122,42 @@
   right: 0;
   margin: auto;
 }
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  width: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.75);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100%;
+  -webkit-transition: all ease-out 250ms;
+  transition: all ease-out 250ms;
+  visibility: hidden;
+  z-index: 999;
+}
+
+.modal .modal-content {
+  height: 75%;
+  width: 75%;
+  opacity: 100%;
+}
+
+.modal.visible {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  visibility: visible;
+}
+
+.hidden {
+  pointer-events: none;
+  visibility: hidden;
+}
