--- a/styles/style.css
+++ b/styles/style.css
@@ -234,10 +234,10 @@ main {
       grid-template-rows: repeat(1fr, 3);
   max-height: calc(min(64rem, 100%));
   max-width: calc(min(32rem, 100%));
-  row-gap: calc(3 * var(--column-gap));
+  row-gap: calc(4 * var(--column-gap));
 }
 
-main .test-container {
+main .speedtest-container {
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
@@ -246,7 +246,7 @@ main .test-container {
   grid-area: test;
 }
 
-main .test-info-progress-container {
+main .info-progress-container {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: info;
@@ -255,8 +255,6 @@ main .test-info-progress-container {
 main .start-btn-container {
   height: 3rem;
   width: 75%;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: button;
@@ -304,26 +302,42 @@ main .start-btn-container {
   margin-right: calc(-1 * var(--padding));
 }
 
-.test-container {
-  position: relative;
+.speedtest-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
+  position: relative;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
   row-gap: var(--column-gap);
+      grid-template-areas: "speedtest" "info";
 }
 
-.test-container .info {
-  --font-size: 4rem;
+.speedtest-container .info {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: info;
+  --font-size: 3.5rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 3fr 1fr;
-      grid-template-columns: 3fr 1fr;
   -webkit-column-gap: var(--column-gap);
           column-gap: var(--column-gap);
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
 }
 
-.test-container .info .unit-container {
+.speedtest-container .info .unit-info-container {
+  padding: var(--column-gap);
+  background-color: var(--background-color-primary-dark);
+  border-radius: var(--border-radius-primary);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.speedtest-container .info .unit-info-container .header {
+  font-size: 1rem;
+}
+
+.speedtest-container .info .unit-info-container .unit-container {
   --font-size-lg: var(--font-size);
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
@@ -332,34 +346,44 @@ main .start-btn-container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: var(--background-color-primary-dark);
-  border-radius: var(--border-radius-primary);
   font-weight: bold;
 }
 
-.test-container .info .kind {
-  text-align: center;
-  font-size: var(--font-size);
-  background-color: var(--background-color-primary-dark);
-  border-radius: var(--border-radius-primary);
+.speedtest-container .info .unit-info-container .footer {
+  color: rgba(255, 255, 255, 0.25);
 }
 
-.test-container .square-box {
+.speedtest-container .info .kind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: var(--background-color-primary-dark);
+  border-radius: var(--border-radius-primary);
+  font-size: var(--font-size);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.speedtest-container .speedtest {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: speedtest;
   background: var(--background-color-secondary);
   border-radius: var(--border-radius-primary);
   z-index: 1;
 }
 
-.test-container .square-box canvas {
+.speedtest-container .speedtest canvas {
   padding: 0.5rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.test-info-progress-container .test-info-container {
+.info-progress-container .info-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -369,7 +393,7 @@ main .start-btn-container {
           flex-direction: row;
 }
 
-.test-info-progress-container .test-info-container .info {
+.info-progress-container .info-container .info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -384,20 +408,20 @@ main .start-btn-container {
   margin-right: 0.5rem;
 }
 
-.test-info-progress-container .test-info-container .info:nth-child(1) {
+.info-progress-container .info-container .info:nth-child(1) {
   margin-left: 0;
 }
 
-.test-info-progress-container .test-info-container .info:nth-child(n) {
+.info-progress-container .info-container .info:nth-child(n) {
   margin-right: 0;
 }
 
-.test-info-progress-container .test-info-container .info .test-kind {
+.info-progress-container .info-container .info .kind {
   padding: 0.25rem 0;
   font-weight: bold;
 }
 
-.test-info-progress-container .test-info-container .info .unit-container {
+.info-progress-container .info-container .info .unit-container {
   padding: 0.5rem;
   height: 100%;
   width: 100%;
@@ -406,7 +430,7 @@ main .start-btn-container {
   text-align: left;
 }
 
-.test-info-progress-container .progress-bar-container {
+.info-progress-container .progress-bar-container {
   margin: 0.5rem 0;
 }
 
@@ -469,77 +493,60 @@ main .start-btn-container {
   main {
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
-        grid-template-areas: "test info" "test button";
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-    max-height: calc(min(32rem, 100%));
-    max-width: calc(min(64rem, 100%));
+        grid-template-areas: "test test" "info button";
+    -ms-grid-columns: auto auto;
+        grid-template-columns: auto auto;
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
-  main .test-container {
+  main .speedtest-container {
     -ms-flex-item-align: start;
         -ms-grid-row-align: start;
         align-self: start;
   }
-  .test-info-progress-container {
-    margin: auto;
-    width: 75%;
+  main .start-btn-container {
+    width: 100%;
   }
-  .test-info-progress-container .test-info-container {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .speedtest-container {
+        grid-template-areas: "speedtest info";
+    -ms-grid-rows: 1fr;
+        grid-template-rows: 1fr;
+    -ms-grid-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr;
+    -webkit-column-gap: var(--column-gap);
+            column-gap: var(--column-gap);
+  }
+  .speedtest-container .info {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: info;
+    -ms-grid-rows: 3fr 1fr;
+        grid-template-rows: 3fr 1fr;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+    row-gap: var(--column-gap);
+  }
+  .speedtest-container .info .unit-info-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .test-info-progress-container .test-info-container .info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-  .test-info-progress-container .test-info-container .info:nth-child(1) {
-    margin-top: 0;
-  }
-  .test-info-progress-container .test-info-container .info:nth-child(n) {
-    margin-bottom: 0;
-  }
-  .test-info-progress-container .test-info-container .info .test-kind {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 0.25rem;
-    padding: 0.5rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: var(--background-color-secondary);
-    border-radius: var(--border-radius-primary);
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    font-size: 1.25rem;
-    text-align: left;
-  }
-  .test-info-progress-container .test-info-container .info .unit-container {
-    margin: 0 0.25rem;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    text-align: center;
+  .speedtest-container .speedtest {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: speedtest;
   }
 }
