--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -153,7 +153,8 @@
     --box-shadow-br: 10px;
     --box-shadow-sr: 0px;
 
-    --box-shadow-color: rgba(0, 0, 0, 0.5);
+    // TODO: Box shadow changes.
+    --box-shadow-color: rgba(0, 0, 0, 0);
     transition: all cubic-bezier(0.09, 0.91, 0.5, 1.1) 500ms;
 
     box-shadow: var(--box-shadow-hl) var(--box-shadow-vl) var(--box-shadow-br)
