--- a/styles/style.scss
+++ b/styles/style.scss
@@ -85,7 +85,7 @@ main {
     display: grid;
     padding: $row-gap/2;
 
-    height: 100%;
+    // height: 100%;
     width: 100%;
     box-sizing: border-box;
 
@@ -94,12 +94,12 @@ main {
         "info"
         "button";
 
-    grid-template-rows: repeat(1fr, 3);
+    grid-template-rows: repeat(auto, 3);
     max-height: calc(min(#{$meter-height}, 100%));
     max-width: calc(min(#{$meter-width}, 100%));
     overflow-x: hidden;
 
-    row-gap: calc(1 * var(--column-gap));
+    // row-gap: calc(1 * var(--column-gap));
 
     .speedtest-container {
         align-self: end;
@@ -117,6 +117,10 @@ main {
         grid-area: button;
         justify-self: center;
     }
+}
+
+* {
+    overflow: hidden;
 }
 
 .pane-container {
@@ -303,6 +307,11 @@ main {
     .unit {
         font-size: var(--font-size-sm);
     }
+}
+
+.hidden {
+    height: 0;
+    visibility: hidden;
 }
 
 @media all and (orientation: landscape) and (max-height: $screen-size-lg) {
